--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,8 +74,19 @@ ul {
     justify-content: center;
     align-items: center;
 }
+@media (max-width:767px){
+    .header .logo{
+        width: 100%;
+        height: 50px;
+    }
+}
 .header .main-nav{
     display: flex;
+}
+@media (max-width:767px){
+    .header .main-nav{
+        margin: auto;
+    }
 }
 .header .main-nav > li > a{
     display: flex;
@@ -90,5 +101,35 @@ ul {
     -moz-transition: var(--main-transition);
     -ms-transition: var(--main-transition);
     -o-transition: var(--main-transition);
+    overflow: hidden;
 }
+@media (max-width:767px){
+    .header .main-nav > li > a{
+        padding: 10px;
+        font-size: 14px;
+        height: 40px;
+
+    }
+}
+.header .main-nav > li > a::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: var(--main-color);
+    top: 0;
+    left: -100%;
+    transition: var(--main-transition);
+    -webkit-transition: var(--main-transition);
+    -moz-transition: var(--main-transition);
+    -ms-transition: var(--main-transition);
+    -o-transition: var(--main-transition);
+}
+.header .main-nav > li > a:hover {
+    color: var(--main-color);
+    background-color: #fafafa;
+}
+.header .main-nav > li > a:hover::before{
+    left: 0%;
+} 
 /* End Header */
