--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,5 +131,18 @@ ul {
 }
 .header .main-nav > li > a:hover::before{
     left: 0%;
-} 
+}
+
 /* End Header */
+/*Start Landing*/
+    .landing{
+
+    }
+    .landing::before{
+        content: '';
+    }
+    .landing .image img{
+        width: 600px;
+        max-width: 100%;
+    }
+/*End Landing*/
