--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,17 @@
 /* Start Global Rules */
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 :root {
-    --main-color: #2196F3;
+    --main-color: #2196f3;
     --main-color-alt: #1787e0;
-    --main-transition:0.3s;
+    --main-transition: 0.3s;
+    --main-padding-top: 100px;
+    --main-padding-bottom: 100px;
+    --section-background: #ececec;
 }
 
 html {
@@ -10,7 +19,7 @@ html {
 }
 
 body {
-    font-family: "cairo", sans-serif;
+    font-family: "Cairo", sans-serif;
 }
 
 a {
@@ -24,125 +33,31 @@ ul {
 }
 
 .container {
-    padding: 15px;
+    padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
 
-/*small*/
-@media(min-width: 768px) {
+/* Small */
+@media (min-width: 768px) {
     .container {
         width: 750px;
     }
 }
 
-/*Medium*/
-@media(min-width: 992px) {
+/* Medium */
+@media (min-width: 992px) {
     .container {
         width: 970px;
     }
 }
 
-/*Large*/
-@media(min-width: 1200px) {
+/* Large */
+@media (min-width: 1200px) {
     .container {
         width: 1170px;
     }
 }
 
-/* End Global Rules */
-/* Start Header */
-.header {
-    background-color: white;
-    position: relative;
-    box-shadow: 0 0 10px #ddd;
-}
-.header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    position: relative;
-}
-.header .logo{
-    color: var(--main-color);
-    font-size: 26px;
-    font-weight: bold;
-    height: 72px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-@media (max-width:767px){
-    .header .logo{
-        width: 100%;
-        height: 50px;
-    }
-}
-.header .main-nav{
-    display: flex;
-}
-@media (max-width:767px){
-    .header .main-nav{
-        margin: auto;
-    }
-}
-.header .main-nav > li > a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:72px ;
-    position:relative ;
-    color: black;
-    padding:0 30px;
-    transition: var(--main-transition);
-    -webkit-transition: var(--main-transition);
-    -moz-transition: var(--main-transition);
-    -ms-transition: var(--main-transition);
-    -o-transition: var(--main-transition);
-    overflow: hidden;
-}
-@media (max-width:767px){
-    .header .main-nav > li > a{
-        padding: 10px;
-        font-size: 14px;
-        height: 40px;
-
-    }
-}
-.header .main-nav > li > a::before{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background-color: var(--main-color);
-    top: 0;
-    left: -100%;
-    transition: var(--main-transition);
-    -webkit-transition: var(--main-transition);
-    -moz-transition: var(--main-transition);
-    -ms-transition: var(--main-transition);
-    -o-transition: var(--main-transition);
-}
-.header .main-nav > li > a:hover {
-    color: var(--main-color);
-    background-color: #fafafa;
-}
-.header .main-nav > li > a:hover::before{
-    left: 0%;
-}
-
-/* End Header */
-/*Start Landing*/
-    .landing{
-
-    }
-    .landing::before{
-        content: '';
-    }
-    .landing .image img{
-        width: 600px;
-        max-width: 100%;
-    }
-/*End Landing*/
+/* Start Global Rules */
